--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,13 @@
           center: {lat: -34.397, lng: 150.644},
           zoom: 8
         });
+
+        var gpx = new GPXDraw({
+          file: 'http://files.parsetfss.com/abcd6703-5ce9-4d10-84ff-38e7e8db27fc/tfss-3ef5275b-4c57-4e61-a6c0-36e172044833-activity_D5FEDC75-F93C-47C9-BD9C-3D25E237F79E.gpx',
+          map: map,
+          opacity: 1,
+          weight: 10
+        });
       });
     </script>
   </body>
